syntax = "proto3";

option csharp_namespace = "MYMA.GrpcDataStore.Service";

package student;

import "google/protobuf/timestamp.proto";

service StudentService {  
  rpc GetAllStudents (Empty) returns (StudentList);
  rpc GetStudent (StudentId) returns (Student);
  rpc InsertStudent (Student) returns (Student);
  rpc UpdateStudnet (Student) returns (Student);
  rpc RemoveStudnet (StudentId) returns (TransResult);
}
message Empty {}

message TransResult {
  bool result=1;
}

message Student {
  string id = 1;
  string firstName = 2;
  string middleName = 3;
  string lastName = 4;
  google.protobuf.Timestamp dateofBirth = 5;
  google.protobuf.Timestamp admisstionDate = 6;
  string mobileNumber = 7;
  string urduName=8;
}

message StudentId {
  string id = 1;
}

message StudentList {
  repeated Student students= 1;
}
